# nexus-bird-feeder

./: .cursorrules  .gitignore  JAVA_INTEGRATION.md  PROJECT_OVERVIEW.md  README.md  app.py  app_swagger.py  bird_feedings.db  java_integration.py  observe_logger.py  pip.conf  pyproject.toml  requirements.txt  vulnerability-report.md
config/: db_config.json  observe_config.json
docs/: .project-memory.md  TEAM_SETUP.md
java/: README.md  pom.xml
java/src/com/birdfeeding/: BirdAnalyzer.java
scripts/: build_java.py  demo_java.py  demo_observe.py  populate_nexus_maven.py  setup_team.py
